--- a/NineYi.Online/NineYi.Online.csproj
+++ b/NineYi.Online/NineYi.Online.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Enums\WeaponEnum.cs" />
+    <Compile Include="Utilities\Utility.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
