--- a/NineYi.Online/NineYi.Online.csproj
+++ b/NineYi.Online/NineYi.Online.csproj
@@ -58,6 +58,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Enums\WeaponEnum.cs" />
     <Compile Include="Utilities\Utility.cs" />
+    <Compile Include="Weapons\BowBehavior.cs" />
+    <Compile Include="Weapons\WeaponBehavior.cs" />
+    <Compile Include="Weapons\KnifeBehavior.cs" />
+    <Compile Include="Weapons\StaffBehavior.cs" />
+    <Compile Include="Weapons\SwordBehavior.cs" />
+    <Compile Include="Weapons\WeaponFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
